[package]
name = "reconstitute"
version = "0.1.0"
edition = "2024"
description = "Derive macro that generates a State struct and a reconstitute constructor for hydrating aggregates from persistent state"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
