[package]
name = "reconstitute"
version = "0.1.1"
edition = "2024"
description = "Derive macro that generates a State struct and a reconstitute constructor for hydrating aggregates from persistent state"
license = "MIT"
repository = "https://github.com/The127/reconstitute"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
